Support bulk requests (#88)
* added 'bulk' arg to generate up to 32 items in one call

* validate input

* updated swagger

* added e2e test

* decrease bulk max size to 10

* avoid passing bulk=0 in e2e tests
