# swagger.yaml
@@ -16,10 +16,23 @@ paths:
             type: array
             items:
               type: string
+              enum: [aptosorbital, derived]
+            default: [aptosorbital, derived]
           description: |
             The gateway supports multiple sources of randomness:
             1. **aptosorbital**: Space-based randomness provided by `cEDGE` or `Crypto2` satellites.
             2. **derived**: Randomness derived from a cosmic TRNG (master seed) that is fetched continuously. The seed is used to generate more random numbers when satellites are not responsive, by using it as a seed for a BIP32 master key and deriving keys from it.
+        - in: query
+          name: bulk
+          schema:
+            type: array
+            items:
+              type: number
+              minimum: 0
+              maximum: 10
+              default: 0
+          description: |
+            The number of derived random numbers to be generated. The maximum is 10. The default is 0.
       responses:
         '200':
           description: A cTRNG response
@@ -41,9 +54,6 @@ paths:
                       pk:
                         type: string
                         description: The public key used for the signature.
-                      algo:
-                        type: string
-                        description: The algorithm used for the signature.
               example:
                 service: "trng"
                 src: "aptosorbital"
@@ -51,7 +61,6 @@ paths:
                 signature: 
                   value: "3046022100a1b2c3d4e5f67890abcdef1234567890a1b2c3d4e5f67890abcdef1234567890022100a1b2c3d4e5f67890abcdef1234567890"
                   pk: ""
-                  algo: ""
         '500':
           description: Internal Server Error
           content:
